# shopsystem-knowledge

./: DOLT_REMOTE.md  conftest.py  manifest  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
features/: adversarial_pass_verdicts.feature  artifact_lifecycle_checks.feature  authoring_time_discovery.feature  byte_stable_generation.feature  coherence_gate_cli.feature  coherence_gate_modes.feature  covered_verdict.feature  frontmatter_conformance.feature  idempotent_regeneration.feature  kind_parameterized_accessor.feature  l1_decision_digest.feature  l1_distribution.feature  parity_contradiction_no_invariant.feature  required_section_sets.feature  shop_knowledge_cli.feature  single_source_projection.feature  single_source_projections_full.feature  supersede_edge.feature  typed_edge_checks.feature  typedef_drift.feature  typedef_real_practice_corrections.feature  typedef_single_source.feature
tests/: test_adversarial_pass_verdicts.py  test_artifact_lifecycle_checks.py  test_artifact_registry.py  test_authoring_time_discovery.py  test_byte_stable_generation.py  test_coherence_gate_cli.py  test_coherence_gate_modes.py  test_convention_gated_extraction.py  test_corpus_loader.py  test_covered_verdict.py  test_frontmatter_conformance.py  test_idempotent_regeneration.py  test_kind_parameterized_accessor.py  test_l1_decision_digest.py  test_l1_distribution.py  test_parity_contradiction_no_invariant.py  test_required_section_sets.py  test_shop_knowledge_cli.py  test_single_source_projection.py  test_single_source_projections_full.py  test_supersede_edge.py  (+4 more)
(+43 files in other folders)
