[project]
name = "shopsystem-knowledge"
version = "0.0.0"
description = "shopsystem-knowledge bounded context — discovery-first knowledge context"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-bdd>=8",
]

[project.scripts]
shop-knowledge = "knowledge.cli:run"
shop-knowledge-gate = "knowledge.coherence_cli:run"

[tool.pytest.ini_options]
# Step-definition modules and unit tests live under tests/; Gherkin feature
# files live under features/ and are resolved relative to bdd_features_base_dir.
testpaths = ["tests"]
bdd_features_base_dir = "features"
pythonpath = ["src"]
# pytest-bdd turns each Gherkin tag (@bc:..., @scenario_hash:...) into a pytest
# mark. Those tags are message/provenance metadata, not registered marks, so
# silence the unknown-mark warning to keep the suite output pristine.
filterwarnings = [
    "ignore::pytest.PytestUnknownMarkWarning",
]
